syntax = "proto3";
package main;
option go_package = "github.com/dorkamotorka/main";

service SyncService {
  rpc GetValue(Empty) returns (ValueResponse);
  rpc SetValue(ValueRequest) returns (Empty);
}

message Empty {}

message ValueRequest {
  int32 key = 1;
  int32 value = 2;
}

message ValueResponse {
  int32 key = 1;
  int32 value = 2;
}
